--- a/index.html
+++ b/index.html
@@ -12,8 +12,132 @@
         <a><h3>Tasks</h3></a>
         <a><h3>Goals</h3></a>
         <a><h3 class="header-btn">Study Timer</h3></a>
-        <h3 class="header-btn">Average Grade: </h3>
+        <h3 class="header-btn">Average Grade: <wrap></wrap></h3>
     
+    </div>
+    <div class="top-section">
+        <h2>Deadline Calendar </h2> <!--FR1-->
+        <div class="deadline-table">
+            <table>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                    <th>Sunday</th>
+                </tr>
+                <tr>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                </tr>
+                <tr>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                </tr>
+                <tr>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                </tr>
+                <tr>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                </tr>
+                <tr>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                    <td>#</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div>
+        <h2>Revision Tasks </h2> <!--FR2&3-->
+            <div class="task-display">
+                <div class="task-card">
+                    <div class="checkbox">[]</div>
+                    <h4>Task Title</h4>
+                    <div class="tag-container">
+                        <h5 class="card-tags">"Type"</h5>
+                    <h5 class="card-tags">"Module"</h5>
+                    </div>
+                    <h5>Deadline Date: ##/##/####</h5>
+                    <p> Description of Task Goes Here</p>
+                </div>
+                <div class="task-card">
+                    <div class="checkbox">[]</div>
+                    <h4>Task Title</h4>
+                    <div class="tag-container">
+                        <h5 class="card-tags">"Type"</h5>
+                    <h5 class="card-tags">"Module"</h5>
+                    </div>
+                    <h5>Deadline Date: ##/##/####</h5>
+                    <p> Description of Task Goes Here</p>
+                </div>
+                <div class="task-card">
+                    <div class="checkbox">[]</div>
+                    <h4>Task Title</h4>
+                    <div class="tag-container">
+                        <h5 class="card-tags">"Type"</h5>
+                    <h5 class="card-tags">"Module"</h5>
+                    </div>
+                    <h5>Deadline Date: ##/##/####</h5>
+                    <p> Description of Task Goes Here</p>
+                </div>
+            </div>
+        <h3>Overdue Tasks</h3> <!--FR4, Add FR5 (Deadline Notifications)-->
+    </div>
+    <div>
+        <h2>Goals</h2><!--FR6-->
+    </div>
+    <div>
+        <h2>Grades</h2><!--FR7-->
+    </div>
+    <div>
+        <h2>Revision Timer</h2><!--FR8-->
     </div>
 </body>
 </html>
