--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a><h3>Tasks</h3></a>
         <a><h3>Goals</h3></a>
         <a><h3 class="header-btn">Study Timer</h3></a>
-        <h3 class="header-btn">Average Grade: <wrap></wrap></h3>
+        <h3 class="header-btn">Average Grade: <wrap>##%</wrap></h3>
     
     </div>
     <div class="top-section">
@@ -104,7 +104,7 @@
                         <h5 class="card-tags">"Type"</h5>
                     <h5 class="card-tags">"Module"</h5>
                     </div>
-                    <h5>Deadline Date: ##/##/####</h5>
+                    <h5>Due: ##/##/####</h5>
                     <p> Description of Task Goes Here</p>
                 </div>
                 <div class="task-card">
@@ -114,7 +114,7 @@
                         <h5 class="card-tags">"Type"</h5>
                     <h5 class="card-tags">"Module"</h5>
                     </div>
-                    <h5>Deadline Date: ##/##/####</h5>
+                    <h5>Due: ##/##/####</h5>
                     <p> Description of Task Goes Here</p>
                 </div>
                 <div class="task-card">
@@ -124,7 +124,7 @@
                         <h5 class="card-tags">"Type"</h5>
                     <h5 class="card-tags">"Module"</h5>
                     </div>
-                    <h5>Deadline Date: ##/##/####</h5>
+                    <h5>Due: ##/##/####</h5>
                     <p> Description of Task Goes Here</p>
                 </div>
             </div>
