Calendar Fixes & General Tweaks

--- a/index.html
+++ b/index.html
@@ -9,94 +9,61 @@
 <body>
     <div class="header-bar">
         <h1><wrap>Study</wrap> Tool</h1>
-        <a><h3>Tasks</h3></a>
-        <a><h3>Goals</h3></a>
-        <a><h3 class="header-btn">Study Timer</h3></a>
-        <h3 class="header-btn">Average Grade: <wrap>##%</wrap></h3>
+        <a><h4>Tasks</h4></a>
+        <a><h4>Goals</h4></a>
+        <a><h4 class="header-btn">Study Timer</h4></a>
+        <h4 class="header-btn">Average Grade: <wrap>##%</wrap></h4>
     
     </div>
     <div class="top-section">
-        <h2>Deadline Calendar </h2> <!--FR1-->
+        <h2 class="main-content">Deadline Calendar </h2> <!--FR1-->
         <div class="deadline-table">
-            <table>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
-                    <th>Sunday</th>
-                </tr>
-                <tr>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-                <tr>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-                <tr>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-                <tr>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-                <tr>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-            </table>
+            <div class="calendar-container">
+                <h3 id="month-year"></h3>
+                <div class="calendar-grid" id="calendar"></div>
+            </div>
+
+            <div class="task-adder">
+                <h3>Add Task</h3>
+                <input type="text" id="task-name" placeholder="Task name">
+                <input type="date" id="task-date">
+                <button id="add-task">Add Task</button>
+            </div>
         </div>
     </div>
-    <div>
+    <div class="main-content">
         <h2>Revision Tasks </h2> <!--FR2&3-->
             <div class="task-display">
+                <div class="task-card">
+                    <div class="checkbox">[]</div>
+                    <h4>Task Title</h4>
+                    <div class="tag-container">
+                        <h5 class="card-tags">"Type"</h5>
+                    <h5 class="card-tags">"Module"</h5>
+                    </div>
+                    <h5>Due: ##/##/####</h5>
+                    <p> Description of Task Goes Here</p>
+                </div>
+                <div class="task-card">
+                    <div class="checkbox">[]</div>
+                    <h4>Task Title</h4>
+                    <div class="tag-container">
+                        <h5 class="card-tags">"Type"</h5>
+                    <h5 class="card-tags">"Module"</h5>
+                    </div>
+                    <h5>Due: ##/##/####</h5>
+                    <p> Description of Task Goes Here</p>
+                </div>
+                <div class="task-card">
+                    <div class="checkbox">[]</div>
+                    <h4>Task Title</h4>
+                    <div class="tag-container">
+                        <h5 class="card-tags">"Type"</h5>
+                    <h5 class="card-tags">"Module"</h5>
+                    </div>
+                    <h5>Due: ##/##/####</h5>
+                    <p> Description of Task Goes Here</p>
+                </div>
                 <div class="task-card">
                     <div class="checkbox">[]</div>
                     <h4>Task Title</h4>
@@ -130,14 +97,31 @@
             </div>
         <h3>Overdue Tasks</h3> <!--FR4, Add FR5 (Deadline Notifications)-->
     </div>
-    <div>
+    <div class="main-content">
         <h2>Goals</h2><!--FR6-->
     </div>
-    <div>
+    <div class="main-content">
         <h2>Grades</h2><!--FR7-->
     </div>
-    <div>
+    <div class="main-content">
         <h2>Revision Timer</h2><!--FR8-->
     </div>
+    <div class="footer-bar">
+        <div class="footer-left">
+             <ul>
+                <li><a href="" alt="">Tasks</a></li>
+                <li><a href="" alt="">Goals</a></li>
+                <li><a href="" alt="">Study Timer</a></li>
+            </ul>
+        </div>
+        <div class="footer-right">
+            <ul>
+                <li>Millie McVey</li>
+                <li>1183086</li>
+                <li><a href="https://github.com/milliemcvey" alt="">Github Profile</a></li>
+            </ul>
+        </div>
+    </div>
+    <script src="script.js"></script> <!--Connects Javascript-->
 </body>
 </html>
