Goal Section HTML / CSS

--- a/index.html
+++ b/index.html
@@ -64,15 +64,47 @@
 
     </div>
     <div class="task-adder">
-        <h3>Add Task</h3>
+        <h3>Add Task:</h3>
         <input type="text" id="task-name" placeholder="Task name">
         <input type="date" id="task-date">
         <button id="add-task">Add Task</button>
     </div>
-       
     </div>
-    <div class="main-content" id="goals">
+    <div id="goals">
         <h2>Goals</h2><!--FR6-->
+        <div class="goal-setter">
+            <h3> My Goal: </h3>
+            <input type="" id="goal-percentage" placeholder="Grade Goal (%)">
+            <button id="save-goal">Save Goal</button>
+        </div>
+        <div class="grade-card-container">
+
+            <div class="grade-card">
+
+                <h3>70%</h3> <!--Add JS Later to Fetch Grades and Transparency when reached-->
+                <h4>1:1</h4>
+
+            </div>
+            <div class="grade-card">
+
+                <h3>60%</h3> <!--Add JS Later to Fetch Grades and Transparency when reached-->
+                <h4>2:1</h4>
+
+            </div>
+            <div class="grade-card">
+
+                <h3>50%</h3> <!--Add JS Later to Fetch Grades and Transparency when reached-->
+                <h4>2:2</h4> 
+
+            </div>
+            <div class="grade-card">
+
+                <h3>40%</h3> <!--Add JS Later to Fetch Grades and Transparency when reached-->
+                <h4>Pass</h4>
+
+            </div>
+
+        </div>
     </div>
     <div class="main-content" id="grades">
         <h2>Grades</h2><!--FR7-->
